--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en=US">
-<head>  
+<head>
+  <link href="animal-stylesheet.css" rel="stylesheet" type="text/css" media="all">
   <Title>Adopt a pet today!</Title>
 </head>
 <body>
