add stylesheet for h1

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -5,7 +5,7 @@
   <Title>Adopt a pet today!</Title>
 </head>
 <body>
-  <h1>Pets Available for Adoption Nearby</h1>
+  <h1 class="attention">Pets Available for Adoption Nearby</h1>
   <p> These animals are ready to be adopted:</p>
   <ul>
     <li>Valor <img src="" alt="A photo of Valor."></li>
