Resizing photos into the same size

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -8,9 +8,9 @@
   <h1 class="attention">Pets Available for Adoption Nearby</h1>
   <p> These animals are ready to be adopted:</p>
   <ul>
-    <li>Valor <img src="" alt="A photo of Valor."></li>
-    <li>Bonnie <img src="" alt="A photo of Bonnie"></li>
-    <li>Timothy <img src="" alt="A photo of Timothy"></li>
+    <li>Valor <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F28%2F2019%2F08%2Fcorgi-dog-name-POPDOGS0819.jpg" alt="A photo of Valor."></li>
+    <li>Bonnie <img src="https://i.ytimg.com/vi/8BYa0U1h5Fs/hqdefault.jpg" alt="A photo of Bonnie"></li>
+    <li>Timothy <img src="https://play-lh.googleusercontent.com/2tfz3TFYAV71wZVPwe9anxGwTag-UOU_Xge7m8h6b2KKo4x-313JW-uN-sQMNQXiIA" alt="A photo of Timothy"></li>
   </ul>
   <p>What are you waiting for? Adopt a pet today!</p>
 
