add discription and links for each animal

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -10,10 +10,18 @@
   <ul>
     <li>Valorli></li>
       <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F28%2F2019%2F08%2Fcorgi-dog-name-POPDOGS0819.jpg" alt="A photo of Valor.">
+      <p>Meet Valorli
+        FOSTER ME! - Will you foster me, so I have a place to stay while I look for my forever home? Usually, it only takes 2-3 weeks to find a family to call my own. Could you spare a short while in your care for me to get a great life? If so, please complete a foster application on our website at:<a href="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F28%2F2019%2F08%2Fcorgi-dog-name-POPDOGS0819.jpg">here</a></p>
     <li>Bonnie</li> 
       <img src="https://i.ytimg.com/vi/8BYa0U1h5Fs/hqdefault.jpg" alt="A photo of Bonnie">
+      <p>Bonnie is a friendly, energetic, and affectionate young bunny looking for a rabbit-safe home with doting humans. He was born to an RA foster bunny about 6 months ago, is neutered, vaccinated against RHDV2 and just generally in great health. Adopt her by filling out the application <a href="https://i.ytimg.com/vi/8BYa0U1h5Fs/hqdefault.jpg">here</a>
+      </p>
     <li>Timothy</li> 
       <img src="https://play-lh.googleusercontent.com/2tfz3TFYAV71wZVPwe9anxGwTag-UOU_Xge7m8h6b2KKo4x-313JW-uN-sQMNQXiIA" alt="A photo of Timothy">
+      <p>The Basics: Hey, what's up? I'm Timothy. I'm a big buddy cat who was wandering the streets for many months before a nice person rescued me. I'm a very friendly guy and can be a little talkative at times. I'm a big boy at almost 18 lbs.
+
+        I can bully other cats sometimes and I had some minor marking issues in the shelter for a while. I'm on an anti-anxiety medication which helped resolve my inappropriate urination. The people here think if I'm in a home as the only cat I won't have any issues with that. Please check me out on our website at:<a href="https://play-lh.googleusercontent.com/2tfz3TFYAV71wZVPwe9anxGwTag-UOU_Xge7m8h6b2KKo4x-313JW-uN-sQMNQXiIA">here</a>
+        </p>
   </ul>
   <p>What are you waiting for? Adopt a pet today!</p>
 
