--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -6,9 +6,10 @@
 </head>
 <body>
   <h1 class="attention">Pets Available for Adoption Nearby</h1>
+  <div class="column">
   <p> These animals are ready to be adopted:</p>
   <ul>
-    <li>Valorli></li>
+    <li>Valorli</li>
       <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F28%2F2019%2F08%2Fcorgi-dog-name-POPDOGS0819.jpg" alt="A photo of Valor.">
       <p>Meet Valorli
         FOSTER ME! - Will you foster me, so I have a place to stay while I look for my forever home? Usually, it only takes 2-3 weeks to find a family to call my own. Could you spare a short while in your care for me to get a great life? If so, please complete a foster application on our website at:<a href="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F28%2F2019%2F08%2Fcorgi-dog-name-POPDOGS0819.jpg">here</a></p>
@@ -22,6 +23,7 @@
 
         I can bully other cats sometimes and I had some minor marking issues in the shelter for a while. I'm on an anti-anxiety medication which helped resolve my inappropriate urination. The people here think if I'm in a home as the only cat I won't have any issues with that. Please check me out on our website at:<a href="https://play-lh.googleusercontent.com/2tfz3TFYAV71wZVPwe9anxGwTag-UOU_Xge7m8h6b2KKo4x-313JW-uN-sQMNQXiIA">here</a>
         </p>
+  </div>
   </ul>
   <p>What are you waiting for? Adopt a pet today!</p>
 
