add a box for the webpage

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -8,6 +8,7 @@
   <h1 class="attention">Pets Available for Adoption Nearby</h1>
   <div class="column">
   <div class="body">
+  <div class="box">
   <h2> These animals are ready to be adopted:</h2>
   <ul>
     <li>Valorli</li>
@@ -27,8 +28,9 @@
   
   </ul>
   <p>What are you waiting for? Adopt a pet today!</p>
-  </div>
-  </div>
+</div>
+</div>
+</div>
 </body>
 
 
