make some content in the center of the webpage

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1 class="attention">Pets Available for Adoption Nearby</h1>
+  <h1 class="center">Please adop a pet today!</h1>
   <div class="column">
   <div class="body">
   <div class="box">
