use div to make the contents in the middle of the webpage

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -5,8 +5,10 @@
   <Title>Adopt a pet today!</Title>
 </head>
 <body>
-  <h1 class="attention">Pets Available for Adoption Nearby</h1>
-  <h1 class="center">Please adop a pet today!</h1>
+  <div class=center>
+    <h1 class="attention">Pets Available for Adoption Nearby</h1>
+    <h1 >Please adop a pet today!</h1>
+  </div>
   <div class="column">
   <div class="body">
   <div class="box">
